@@ -2,6 +2,7 @@ firmware-nonfree (20230625-3~exp2) UNRELEASED; urgency=medium
 
   * d/b/gencontrol.py: Remove support for encoding file version in filename
   * d/b/gencontrol.py: Remove check for .svn directories
+  * d/b/gencontrol.py: Use path objects where possible
 
  -- Ben Hutchings <benh@debian.org>  Mon, 17 Jun 2024 19:44:17 +0100
 
